--- a/cloud_drive/src/Pages/Loginpage.css
+++ b/cloud_drive/src/Pages/Loginpage.css
@@ -33,8 +33,8 @@ h1{
     margin-bottom: 18px;
 }
 
-Button:hover {
-    background-color: rgb(255, 255, 255);
+.rounded-pill:hover {
+    background-color: cadetblue;
     transform: scale(1.1);
     transition: 0.4s;
 }
