--- a/cloud_drive/src/Pages/Loginpage.css
+++ b/cloud_drive/src/Pages/Loginpage.css
@@ -33,7 +33,11 @@ h1{
     margin-bottom: 18px;
 }
 
-.rounded-pill:hover {
+div.d-grid > Button {
+    background-color: crimson;
+}
+
+div.d-grid > Button:hover {
     background-color: cadetblue;
     transform: scale(1.1);
     transition: 0.4s;
