--- a/cloud_drive/src/Pages/Loginpage.css
+++ b/cloud_drive/src/Pages/Loginpage.css
@@ -1,3 +1,4 @@
+
 #w{
     display: flex;
     align-Items: center;
@@ -34,6 +35,7 @@ h1{
 }
 
 div.d-grid > Button {
+    font-family: Alata;
     background-color: crimson;
 }
 
