--- a/cloud_drive/src/Pages/Loginpage.css
+++ b/cloud_drive/src/Pages/Loginpage.css
@@ -35,6 +35,7 @@ h1{
 }
 
 div.d-grid > Button {
+    width: 80%;
     font-family: Alata;
     background-color: crimson;
 }
@@ -45,3 +46,37 @@ div.d-grid > Button:hover {
     transition: 0.4s;
 }
 
+label {
+    font-family: Alata;
+    font-weight: bold;
+}
+
+
+.d-grid {
+    place-items: center;
+}
+/*
+font-family: 'Alata', sans-serif;
+font-family: 'Amaranth', sans-serif;
+font-family: 'Architects Daughter', cursive;
+font-family: 'Barlow Condensed', sans-serif;
+font-family: 'Courier Prime', monospace;
+font-family: 'Cutive Mono', monospace;
+font-family: 'Fredoka One', cursive;
+font-family: 'Gowun Batang', serif;
+font-family: 'IBM Plex Sans', sans-serif;
+font-family: 'IBM Plex Sans Condensed', sans-serif;
+font-family: 'Indie Flower', cursive;
+font-family: 'Josefin Sans', sans-serif;
+font-family: 'Kosugi Maru', sans-serif;
+font-family: 'Lexend Giga', sans-serif;
+font-family: 'Nunito', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Roboto Mono', monospace;
+font-family: 'Roboto Slab', serif;
+font-family: 'Ropa Sans', sans-serif;
+font-family: 'Share Tech Mono', monospace;
+font-family: 'Staatliches', cursive;
+font-family: 'Stick No Bills', sans-serif;
+font-family: 'Teko', sans-serif;
+*/
