--- a/cloud_drive/src/Pages/Registerpage.css
+++ b/cloud_drive/src/Pages/Registerpage.css
@@ -9,20 +9,36 @@
     overflow: hidden;
     flex-Direction: column;
 }
+
 #w2{
-    border-radius: 25px;
+    border-radius: 10px;
     border-style: solid;
     background-color: aliceblue;
 }
+
 hr.solid {
     border-top: 3px solid #bbb;
-  }
+}
+
 h1{
     text-align: center;
+    margin: 10px;
 }
+
+p{
+    text-align: center;
+    margin: 1px;
+}
+
+#alreadyHave{
+    text-align: center;
+    margin: 1px;
+}
+
 #google{
     align-self: center;
 }
+
 .error {
     background-color: tomato;
     color: white;
@@ -31,4 +47,21 @@ h1{
     font-weight: bold;
     max-width: 400px;
     margin-bottom: 18px;
-  }
+}
+
+.btn {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 0px 10px;
+    cursor: pointer;
+    border-radius: 25px;
+}
+
+#login {
+    margin: 20px;
+}
