--- a/cloud_drive/src/Pages/Dashboard.css
+++ b/cloud_drive/src/Pages/Dashboard.css
@@ -3,3 +3,15 @@
     background-color: rgb(186, 29, 60);
     color: whitesmoke;
 }
+
+#w{
+    display: flex;
+    align-Items: center;
+    justify-Content: center;
+    height: 100vh;
+    margin: 0;
+    background-Image:url("/public/cloud.jpg");
+    background-Size: cover;
+    overflow: hidden;
+    flex-Direction: column;
+}
