Added More Styling for Dashboard and Password Reset

--- a/cloud_drive/src/Pages/Passwordreset.css
+++ b/cloud_drive/src/Pages/Passwordreset.css
@@ -1,1 +1,18 @@
+#resetbg {
+    max-width: 70vh;
+    color: blanchedalmond;
+    backdrop-filter: blur(10px);
+    font-size: large;
+    background-color: rgb(10, 10, 90);
+}
 
+#prReset {
+    background-color: crimson;
+    font-family: Alata;
+    color: blanchedalmond;
+}
+
+.prTitle {
+    color: antiquewhite;
+    font-family: Alata;
+}
