--- a/cloud_drive/src/Pages/Dashboard.css
+++ b/cloud_drive/src/Pages/Dashboard.css
@@ -17,6 +17,7 @@
 }
 
 #folderBG {
+    animation: folderAnimation 2s;
     background-color: rgb(243, 241, 219);
     font-family: Alata;
     height: 60vh;
@@ -29,11 +30,61 @@
     font-family: Alata;
 }
 
+#DashboardWelcome, #ButtonFormatting {
+    animation: welcomeAnimate 2s;
+}
+
+#emailFormatting {
+    animation: emailAnimate 2s;
+}
+
 #logoutButton {
+    /*
     width: 70vh;
     position: absolute;
     right: 50;
     bottom: 0;
+    */
     background-color: crimson;
     font-family: Alata;
+}
+
+
+#ButtonFormatting {
+    width: 70vh;
+    position: absolute;
+    right: 50;
+    bottom: 0;
+}
+
+@keyframes folderAnimation {
+    0% {
+        transform: translate(20vh);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translate(0vh);
+        opacity: 1;
+    }
+}
+
+@keyframes welcomeAnimate {
+    0% {
+        transform: translate(-100vh);
+    }
+    100% {
+        transform: translate(0vh);
+    }
+}
+
+@keyframes emailAnimate {
+    0% {
+        opacity: 0;
+        transform: translate(30vh);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0vh);
+    }
 }
